--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,10 @@
 		
 		<!-- JPA, MySQL e H2 -->
 		<dependency>
+			<groupId> org.springframework.data </groupId>
+			<artifactId> spring-data-jpa </artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>		
@@ -52,6 +56,17 @@
 		</dependency>			
 	</dependencies>
 
+	<repositories>
+		<repository>
+			<id>spring-libs-release</id>
+			<name>Spring Releases</name>
+			<url>https://repo.spring.io/libs-release</url>
+			<snapshots>
+			<enabled>false</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -60,5 +75,6 @@
 			</plugin>
 		</plugins>
 	</build>
+
 
 </project>
