--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,7 @@
 			<artifactId>jackson-datatype-jdk8</artifactId>
 		</dependency>
 		
+		<!-- Apache -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
