--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -13,5 +13,5 @@ paginacao.qtd_por_pagina=25
 
 # JWT
 jwt.secret=_@POE&L3tF?65O9j4z&L5!nU2B!eT65_
-# token com duração de 7 dias
+# token com duração de 7 diass
 jwt.expiration=604800
