--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -5,5 +5,5 @@ spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=sa
 
-# Desabilita Flyway migration
+# Desabilita Flyway migrations
 flyway.enabled=false
