--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-spring.profiles.active=dev
+spring.profiles.active=test
+
+server.port=8085
 
 # MySQL
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/ponto_inteligente?useTimezone=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/ponto_inteligente?useTimezone=true&serverTimezone=UTC&useSSL=false
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=bruno1984
 
@@ -19,4 +22,3 @@ paginacao.qtd_por_pagina=25
 jwt.secret=_@HRL&L3tF?Z7ccj4z&L5!nU2B!Rjs3_
 # token com duração de 7 dias
 jwt.expiration=604800
-
