--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-spring.profiles.active=test
+spring.profiles.active=dev
 
 server.port=8085
+debug=true
 
 # MySQL
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/ponto_inteligente?useTimezone=true&serverTimezone=UTC&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3307/ponto_inteligente?useTimezone=true&serverTimezone=UTC&useSSL=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=bruno1984
